<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tool="http://schemas.android.com/tools"
    android:paddingHorizontal="18dp"
    android:paddingTop="16dp"
    android:paddingBottom="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/ivProfilePicture"
        android:layout_width="49dp"
        android:layout_height="49dp"
        tool:src="@tools:sample/avatars"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/profile_picture" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@id/ivProfilePicture"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/thirdscreen_dummy_name"
        android:fontFamily="@font/poppins_medium"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvUserName"
        app:layout_constraintStart_toEndOf="@id/ivProfilePicture"
        android:fontFamily="@font/poppins_medium"
        android:textSize="10sp"
        android:layout_marginStart="20dp"
        android:textColor="@color/email_text"
        android:text="@string/dummy_email"/>


</androidx.constraintlayout.widget.ConstraintLayout>